@@ -1,14 +1,8 @@
 package com.example.whatseoul.service;
 
 import com.example.whatseoul.dto.CityData;
-import com.example.whatseoul.entity.Area;
-import com.example.whatseoul.entity.Population;
-import com.example.whatseoul.entity.PopulationForecast;
-import com.example.whatseoul.entity.Weather;
-import com.example.whatseoul.respository.cityData.AreaRepository;
-import com.example.whatseoul.respository.cityData.PopulationForecastRepository;
-import com.example.whatseoul.respository.cityData.PopulationRepository;
-import com.example.whatseoul.respository.cityData.WeatherRepository;
+import com.example.whatseoul.entity.*;
+import com.example.whatseoul.respository.cityData.*;
 import lombok.RequiredArgsConstructor;
 import lombok.extern.slf4j.Slf4j;
 import org.springframework.beans.factory.annotation.Value;
@@ -37,13 +31,15 @@ public class ApiScheduler {
     private final WeatherRepository weatherRepository;
     private final PopulationRepository populationRepository;
     private final PopulationForecastRepository populationForecastRepository;
+    private final CulturalEventRepository culturalEventRepository;
 
     @Value("${seoul.open.api.url}")
     private String url;
 
 
     @Transactional
-    @Scheduled(cron = "0 4/5 * * * *")
+    @Scheduled(cron = "0 33/5 * * * *")
+
     public void call() {
         long startTime = System.currentTimeMillis();
         List<Area> areas = areaRepository.findAll();
@@ -65,9 +61,14 @@ public class ApiScheduler {
                 .toList();
 
         List<PopulationForecast> pplForecastList = allFutures.stream()
-            .map(CompletableFuture::join)
-            .flatMap(cityData -> cityData.getPplForecast().stream())
-            .collect(Collectors.toList());
+                .map(CompletableFuture::join)
+                .flatMap(cityData -> cityData.getPplForecast().stream())
+                .collect(Collectors.toList());
+
+        List<CultureEvent> cultureEventList = allFutures.stream()
+                .map(CompletableFuture::join)
+                .map(CityData::getCultureEvent)
+                .toList();
 
         weatherRepository.deleteAllInBatch();
         weatherRepository.saveAll(weatherList);
@@ -77,6 +78,8 @@ public class ApiScheduler {
         populationRepository.saveAll(populationList); // 인구데이터를 먼저 저장한 후 인구 예측 데이터 저장
         populationForecastRepository.saveAll(pplForecastList);
 
+        culturalEventRepository.deleteAllInBatch();
+        culturalEventRepository.saveAll(cultureEventList);
 
         long endTime = System.currentTimeMillis();
         long totalTime = (endTime-startTime)/1000;
@@ -92,8 +95,9 @@ public class ApiScheduler {
                 Weather weather= parseWeatherData(document, area);
                 Population population = parsePopulationData(document, area);
                 List<PopulationForecast> pplForecast = parsePopulationForecastData(document, population);
+                CultureEvent cultureEvent = parseCultureEventData(document, area);
 
-                return new CityData(weather, population, pplForecast);
+                return new CityData(weather, population, cultureEvent, pplForecast);
             } catch (SAXException | IOException | ParserConfigurationException e) {
                 log.error("error fetching citydata for areaname {}", area.getAreaName(), e);
                 return null;
@@ -150,15 +154,26 @@ public class ApiScheduler {
 
     public Weather parseWeatherData(Document document, Area area){
         return Weather.builder()
-                    .temperature(getElement(document, "TEMP"))
-                    .maxTemperature(getElement(document, "MAX_TEMP"))
-                    .minTemperature(getElement(document, "MIN_TEMP"))
-                    .pm25Index(getElement(document, "PM25_INDEX"))
-                    .pm10Index(getElement(document, "PM10_INDEX"))
-                    .pcpMsg(getElement(document, "PCP_MSG"))
-                    .weatherTime(getElement(document, "WEATHER_TIME"))
-                    .area(area)
-                    .build();
+                .temperature(getElement(document, "TEMP"))
+                .maxTemperature(getElement(document, "MAX_TEMP"))
+                .minTemperature(getElement(document, "MIN_TEMP"))
+                .pm25Index(getElement(document, "PM25_INDEX"))
+                .pm10Index(getElement(document, "PM10_INDEX"))
+                .pcpMsg(getElement(document, "PCP_MSG"))
+                .weatherTime(getElement(document, "WEATHER_TIME"))
+                .area(area)
+                .build();
+    }
+
+
+    public CultureEvent parseCultureEventData(Document document, Area area){
+        return CultureEvent.builder()
+                .culturalEventName(getElement(document,"EVENT_NM"))
+                .culturalEventPeriod(getElement(document, "EVENT_PERIOD"))
+                .culturalEventPlace(getElement(document, "EVENT_PLACE"))
+                .culturalEventUrl(getElement(document, "URL"))
+                .area(area)
+                .build();
     }
 
     private String getElement(Document document, String tag) {
@@ -194,5 +209,3 @@ public class ApiScheduler {
     //     return "No Tag";
     // }
 }
-
-
